golink/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: golink
spec:
  replicas: 2
  selector:
    matchLabels:
      app: golink
  template:
    metadata:
      labels:
        app: golink
    spec:
      containers:
        - image: ghcr.io/simulatan/golink:0.1.5
          name: golink
          ports:
            - containerPort: 8080
