golink/service.yml
apiVersion: v1
kind: Service
metadata:
  name: golink
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: golink
