golink/ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: golink
spec:
  entryPoints:
    - websecure
    - web
  routes:
    - kind: Rule
      match: Host(`l.simulatan.me`)
      services:
        - name: golink
          port: 80
      middlewares:
        - name: redirect-to-https
          namespace: default
